# guild

./: .gitignore  OPERATING_MODEL.md  PREREQUISITES.md  README.md  ROADMAP.md  STATUS.md  alembic.ini  pyproject.toml  render.yaml
.github/workflows/: ci.yml
decisions/: 0001-template.md  0002-wedge-2-thread-first.md  0003-thread-schema.md  0004-decision-layer-contract.md  0005-polling-to-webhook-migration.md  0006-asyncio-race-condition.md
docs/: 01-event-stream.md  02-thread-model.md  03-context-assembly.md  04-decision-layer.md  05-action-primitives.md  06-state-machine.md  07-social-presence.md  08-work-claiming.md  09-deployment.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
plan/g2-slice-1-foundation/: general-purpose-engineer-brief.md
plan/g2-slice-2-state-machine/: general-purpose-engineer-brief.md
plan/g2-slice-3-redo/: general-purpose-engineer-brief.md
plan/g2-slice-4-decision/: general-purpose-engineer-brief.md
plan/g2-slice-5-e2e/: general-purpose-engineer-brief.md
plan/phase-0-framing/: customer-researcher-brief.md  wedge-framing.md
plan/wedge-2-plan/: engineering-plan.md  general-purpose-engineer-brief.md
src/guild/: claiming.py  config.py  context.py  crud.py  db.py  decision.py  event_source.py  github_client.py  main.py  (+4 more)
tests/: conftest.py  test_action_runner.py  test_claiming.py  test_config.py  test_context.py  test_crud.py  test_db.py  test_decision.py  test_event_source.py  test_meta_primitives.py  test_models.py  test_primitives.py  test_schema.py  test_state_machine.py  test_triggers.py  test_worker.py
(+7 files in other folders)
