[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guild"
version = "0.1.0"
description = "Platform for autonomous software development workers"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "anthropic>=0.34",
    "python-ulid>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
guild = "guild.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/guild"]
